# serializer version: 1
# name: test_render_jupyter_snapshot
  '''
  set -euo pipefail
  
  PID=snapshot-project
  ITOK=snapshot-token
  INF_ENV=dev
  GTOKEN=snapshot-gitea-token
  ENV_FILE=/opt/docker-server/stacks/jupyter/.infisical.env
  LEGACY_ENV=/opt/docker-server/stacks/jupyter/.env
  BEGIN_MARKER='# === BEGIN nexus-secret-sync (Infisical → Jupyter env, plaintext, regenerated each spin-up — do not edit by hand) ==='
  END_MARKER='# === END nexus-secret-sync ==='
  FOLDERS_URL=http://localhost:8070/api/v1/folders
  SECRETS_URL=http://localhost:8070/api/v3/secrets/raw
  
  CFG=$(mktemp)
  SEEN=$(mktemp)
  APPEND=$(mktemp)
  NEW_BLOCK=$(mktemp)
  TSV=$(mktemp)
  TMP_OUT=""
  chmod 600 "$CFG" "$APPEND" "$NEW_BLOCK" "$TSV"
  trap 'rm -f "$CFG" "$SEEN" "$APPEND" "$NEW_BLOCK" "$TSV" "$TMP_OUT"' EXIT
  printf 'header = "Authorization: Bearer %s"\n' "$ITOK" > "$CFG"
  
  if ! command -v jq >/dev/null 2>&1; then
      echo "  ⚠ jq is not installed on the remote VM — Infisical sync needs jq, install with: sudo apt-get install -y jq" >&2
      echo "RESULT pushed=0 skipped_name=0 skipped_multi=0 failed=0 collisions=0 succeeded=0 wrote=0"
      exit 0
  fi
  
  PUSHED=0; SKIPPED_NAME=0; SKIPPED_MULTI=0; FAILED=0; COLLISIONS=0; SUCCEEDED=0; WROTE=0
  
  FOLDERS_JSON=$(curl -sS --config "$CFG" --get \
      --connect-timeout 5 --max-time 15 \
      --data-urlencode "workspaceId=$PID" \
      --data-urlencode "environment=$INF_ENV" \
      "$FOLDERS_URL" || echo '{}')
  FOLDERS=$(printf '%s' "$FOLDERS_JSON" | jq -r '.folders[]?.name' | LC_ALL=C sort || true)
  FOLDERS=$(printf '%s\n/\n' "$FOLDERS")
  
  while IFS= read -r FOLDER; do
      [ -z "$FOLDER" ] && continue
      if [ "$FOLDER" = "/" ]; then
          SECRET_PATH="/"; FOLDER_LABEL="<root>"
      else
          SECRET_PATH="/$FOLDER"; FOLDER_LABEL="$FOLDER"
      fi
      SECRETS_JSON=$(curl -sS --config "$CFG" --get \
          --connect-timeout 5 --max-time 30 \
          --data-urlencode "workspaceId=$PID" \
          --data-urlencode "environment=$INF_ENV" \
          --data-urlencode "secretPath=$SECRET_PATH" \
          "$SECRETS_URL" || true)
      if ! printf '%s' "$SECRETS_JSON" | jq -e '.secrets | type == "array"' >/dev/null; then
          FAILED=$((FAILED+1))
          echo "  ⚠ Infisical fetch '$FOLDER_LABEL' returned bad shape, skipping" >&2
          continue
      fi
      if ! printf '%s' "$SECRETS_JSON" | jq -r '.secrets[]? | [.secretKey, (.secretValue | @base64)] | @tsv' > "$TSV"; then
          FAILED=$((FAILED+1))
          echo "  ⚠ jq TSV extraction failed for folder '$FOLDER_LABEL' — skipping" >&2
          continue
      fi
      SUCCEEDED=$((SUCCEEDED+1))
      while IFS=$'\t' read -r KEY VALUE_B64; do
          [ -z "$KEY" ] && continue
          if ! printf '%s' "$KEY" | grep -qE '^[A-Za-z_][A-Za-z0-9_]*$'; then
              SKIPPED_NAME=$((SKIPPED_NAME+1)); continue
          fi
          VALUE=$(printf '%s' "$VALUE_B64" | base64 -d || true)
          if printf '%s' "$VALUE" | grep -q $'\n'; then
              SKIPPED_MULTI=$((SKIPPED_MULTI+1))
              echo "  ⚠ Skipping multi-line secret '$KEY' (folder '$FOLDER_LABEL')" >&2
              continue
          fi
          EXISTING=$(awk -F'\t' -v k="$KEY" '$1 == k {print $2; exit}' "$SEEN")
          if [ -n "$EXISTING" ]; then
              COLLISIONS=$((COLLISIONS+1))
              echo "  ⚠ Key collision: '$KEY' in folder '$FOLDER_LABEL' shadowed by earlier value from '$EXISTING' (first-wins)" >&2
              continue
          fi
          ESCAPED_VALUE=$(printf '%s' "$VALUE" | sed -e 's/\\/\\\\/g' -e 's/"/\\"/g')
          printf '%s\t%s\n' "$KEY" "$FOLDER_LABEL" >> "$SEEN"
          printf '%s="%s"\n' "$KEY" "$ESCAPED_VALUE" >> "$APPEND"
          PUSHED=$((PUSHED+1))
      done < "$TSV"
  done <<< "$FOLDERS"
  
  if [ -n "$GTOKEN" ] && ! grep -qE '^GITEA_TOKEN=' "$APPEND"; then
      ESCAPED_GTOKEN=$(printf '%s' "$GTOKEN" | sed -e 's/\\/\\\\/g' -e 's/"/\\"/g')
      printf 'GITEA_TOKEN="%s"\n' "$ESCAPED_GTOKEN" >> "$APPEND"
      PUSHED=$((PUSHED+1))
  fi
  
  if [ "$SUCCEEDED" -eq 0 ]; then
      echo "  ⚠ No Infisical folder fetch succeeded — leaving existing $ENV_FILE untouched" >&2
      echo "RESULT pushed=0 skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=0 wrote=0"
      exit 0
  fi
  
  if [ "$PUSHED" -eq 0 ]; then
      echo "  ⚠ Infisical returned $SUCCEEDED folder(s) but zero usable secrets — leaving existing $ENV_FILE untouched" >&2
      echo "RESULT pushed=0 skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=$SUCCEEDED wrote=0"
      exit 0
  fi
  
  {
      printf '%s\n' "$BEGIN_MARKER"
      LC_ALL=C sort -t= -k1,1 "$APPEND"
      printf '%s\n' "$END_MARKER"
  } > "$NEW_BLOCK"
  
  [ -f "$ENV_FILE" ] || touch "$ENV_FILE"
  chmod 600 "$ENV_FILE"
  
  TMP_OUT=$(mktemp -p "$(dirname "$ENV_FILE")" .infisical.env.XXXXXX)
  chmod 600 "$TMP_OUT"
  # Strip any existing block, then append the new one. Same anchored
  # regex deploy.sh used; markers are interpolated as fixed strings so
  # operator-edited content above/below stays put.
  sed '/^# === BEGIN nexus-secret-sync/,/^# === END nexus-secret-sync/d' "$ENV_FILE" > "$TMP_OUT"
  cat "$NEW_BLOCK" >> "$TMP_OUT"
  mv "$TMP_OUT" "$ENV_FILE"
  chmod 600 "$ENV_FILE"
  WROTE=1
  
  if [ -f "$LEGACY_ENV" ]; then
      LEGACY_TMP=$(mktemp -p "$(dirname "$LEGACY_ENV")" .env.XXXXXX)
      chmod 600 "$LEGACY_TMP"
      sed '/^# === BEGIN nexus-secret-sync/,/^# === END nexus-secret-sync/d' "$LEGACY_ENV" > "$LEGACY_TMP"
      mv "$LEGACY_TMP" "$LEGACY_ENV"
  fi
  
  echo "RESULT pushed=$PUSHED skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=$SUCCEEDED wrote=$WROTE"
  
  '''
# ---
# name: test_render_marimo_snapshot
  '''
  set -euo pipefail
  
  PID=snapshot-project
  ITOK=snapshot-token
  INF_ENV=dev
  GTOKEN=snapshot-gitea-token
  ENV_FILE=/opt/docker-server/stacks/marimo/.infisical.env
  LEGACY_ENV=/opt/docker-server/stacks/marimo/.env
  BEGIN_MARKER='# === BEGIN nexus-secret-sync (Infisical → Marimo env, plaintext, regenerated each spin-up — do not edit by hand) ==='
  END_MARKER='# === END nexus-secret-sync ==='
  FOLDERS_URL=http://localhost:8070/api/v1/folders
  SECRETS_URL=http://localhost:8070/api/v3/secrets/raw
  
  CFG=$(mktemp)
  SEEN=$(mktemp)
  APPEND=$(mktemp)
  NEW_BLOCK=$(mktemp)
  TSV=$(mktemp)
  TMP_OUT=""
  chmod 600 "$CFG" "$APPEND" "$NEW_BLOCK" "$TSV"
  trap 'rm -f "$CFG" "$SEEN" "$APPEND" "$NEW_BLOCK" "$TSV" "$TMP_OUT"' EXIT
  printf 'header = "Authorization: Bearer %s"\n' "$ITOK" > "$CFG"
  
  if ! command -v jq >/dev/null 2>&1; then
      echo "  ⚠ jq is not installed on the remote VM — Infisical sync needs jq, install with: sudo apt-get install -y jq" >&2
      echo "RESULT pushed=0 skipped_name=0 skipped_multi=0 failed=0 collisions=0 succeeded=0 wrote=0"
      exit 0
  fi
  
  PUSHED=0; SKIPPED_NAME=0; SKIPPED_MULTI=0; FAILED=0; COLLISIONS=0; SUCCEEDED=0; WROTE=0
  
  FOLDERS_JSON=$(curl -sS --config "$CFG" --get \
      --connect-timeout 5 --max-time 15 \
      --data-urlencode "workspaceId=$PID" \
      --data-urlencode "environment=$INF_ENV" \
      "$FOLDERS_URL" || echo '{}')
  FOLDERS=$(printf '%s' "$FOLDERS_JSON" | jq -r '.folders[]?.name' | LC_ALL=C sort || true)
  FOLDERS=$(printf '%s\n/\n' "$FOLDERS")
  
  while IFS= read -r FOLDER; do
      [ -z "$FOLDER" ] && continue
      if [ "$FOLDER" = "/" ]; then
          SECRET_PATH="/"; FOLDER_LABEL="<root>"
      else
          SECRET_PATH="/$FOLDER"; FOLDER_LABEL="$FOLDER"
      fi
      SECRETS_JSON=$(curl -sS --config "$CFG" --get \
          --connect-timeout 5 --max-time 30 \
          --data-urlencode "workspaceId=$PID" \
          --data-urlencode "environment=$INF_ENV" \
          --data-urlencode "secretPath=$SECRET_PATH" \
          "$SECRETS_URL" || true)
      if ! printf '%s' "$SECRETS_JSON" | jq -e '.secrets | type == "array"' >/dev/null; then
          FAILED=$((FAILED+1))
          echo "  ⚠ Infisical fetch '$FOLDER_LABEL' returned bad shape, skipping" >&2
          continue
      fi
      if ! printf '%s' "$SECRETS_JSON" | jq -r '.secrets[]? | [.secretKey, (.secretValue | @base64)] | @tsv' > "$TSV"; then
          FAILED=$((FAILED+1))
          echo "  ⚠ jq TSV extraction failed for folder '$FOLDER_LABEL' — skipping" >&2
          continue
      fi
      SUCCEEDED=$((SUCCEEDED+1))
      while IFS=$'\t' read -r KEY VALUE_B64; do
          [ -z "$KEY" ] && continue
          if ! printf '%s' "$KEY" | grep -qE '^[A-Za-z_][A-Za-z0-9_]*$'; then
              SKIPPED_NAME=$((SKIPPED_NAME+1)); continue
          fi
          VALUE=$(printf '%s' "$VALUE_B64" | base64 -d || true)
          if printf '%s' "$VALUE" | grep -q $'\n'; then
              SKIPPED_MULTI=$((SKIPPED_MULTI+1))
              echo "  ⚠ Skipping multi-line secret '$KEY' (folder '$FOLDER_LABEL')" >&2
              continue
          fi
          EXISTING=$(awk -F'\t' -v k="$KEY" '$1 == k {print $2; exit}' "$SEEN")
          if [ -n "$EXISTING" ]; then
              COLLISIONS=$((COLLISIONS+1))
              echo "  ⚠ Key collision: '$KEY' in folder '$FOLDER_LABEL' shadowed by earlier value from '$EXISTING' (first-wins)" >&2
              continue
          fi
          ESCAPED_VALUE=$(printf '%s' "$VALUE" | sed -e 's/\\/\\\\/g' -e 's/"/\\"/g')
          printf '%s\t%s\n' "$KEY" "$FOLDER_LABEL" >> "$SEEN"
          printf '%s="%s"\n' "$KEY" "$ESCAPED_VALUE" >> "$APPEND"
          PUSHED=$((PUSHED+1))
      done < "$TSV"
  done <<< "$FOLDERS"
  
  if [ -n "$GTOKEN" ] && ! grep -qE '^GITEA_TOKEN=' "$APPEND"; then
      ESCAPED_GTOKEN=$(printf '%s' "$GTOKEN" | sed -e 's/\\/\\\\/g' -e 's/"/\\"/g')
      printf 'GITEA_TOKEN="%s"\n' "$ESCAPED_GTOKEN" >> "$APPEND"
      PUSHED=$((PUSHED+1))
  fi
  
  if [ "$SUCCEEDED" -eq 0 ]; then
      echo "  ⚠ No Infisical folder fetch succeeded — leaving existing $ENV_FILE untouched" >&2
      echo "RESULT pushed=0 skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=0 wrote=0"
      exit 0
  fi
  
  if [ "$PUSHED" -eq 0 ]; then
      echo "  ⚠ Infisical returned $SUCCEEDED folder(s) but zero usable secrets — leaving existing $ENV_FILE untouched" >&2
      echo "RESULT pushed=0 skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=$SUCCEEDED wrote=0"
      exit 0
  fi
  
  {
      printf '%s\n' "$BEGIN_MARKER"
      LC_ALL=C sort -t= -k1,1 "$APPEND"
      printf '%s\n' "$END_MARKER"
  } > "$NEW_BLOCK"
  
  [ -f "$ENV_FILE" ] || touch "$ENV_FILE"
  chmod 600 "$ENV_FILE"
  
  TMP_OUT=$(mktemp -p "$(dirname "$ENV_FILE")" .infisical.env.XXXXXX)
  chmod 600 "$TMP_OUT"
  # Strip any existing block, then append the new one. Same anchored
  # regex deploy.sh used; markers are interpolated as fixed strings so
  # operator-edited content above/below stays put.
  sed '/^# === BEGIN nexus-secret-sync/,/^# === END nexus-secret-sync/d' "$ENV_FILE" > "$TMP_OUT"
  cat "$NEW_BLOCK" >> "$TMP_OUT"
  mv "$TMP_OUT" "$ENV_FILE"
  chmod 600 "$ENV_FILE"
  WROTE=1
  
  if [ -f "$LEGACY_ENV" ]; then
      LEGACY_TMP=$(mktemp -p "$(dirname "$LEGACY_ENV")" .env.XXXXXX)
      chmod 600 "$LEGACY_TMP"
      sed '/^# === BEGIN nexus-secret-sync/,/^# === END nexus-secret-sync/d' "$LEGACY_ENV" > "$LEGACY_TMP"
      mv "$LEGACY_TMP" "$LEGACY_ENV"
  fi
  
  echo "RESULT pushed=$PUSHED skipped_name=$SKIPPED_NAME skipped_multi=$SKIPPED_MULTI failed=$FAILED collisions=$COLLISIONS succeeded=$SUCCEEDED wrote=$WROTE"
  
  '''
# ---
